applications/main-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-service
  namespace: schoollab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-service
  template:
    metadata:
      labels:
        app: main-service
    spec:
      containers:
        - name: main-service
          image: dawmac/schoollab:main-service-47
          ports:
            - containerPort: 8080
