applications/main-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: schoollab
  labels:
    app: main-service
spec:
  selector:
    app: main-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
